check this page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,24 +1,101 @@
 {
-  "about": "About",
+  "Президент РТ": "President of the Republic of Tajikistan",
+  "aboutUsh1": "About us",
   "activity": "Activity",
   "activityAIDT": "Activity AIDT",
+  "ActualVacancy": "Current Vacancies",
+  "adressForm": "Street, house and apartment",
+  "allFilter": "All",
   "allMedia": "All media",
   "allNews": "All news",
   "applyFilter": "Apply filter",
+  "ApplyVacancy": "Applying for a job",
+  "articlesFilter": "Articles",
+  "backToMain": "Back to main",
+  "backToVacancy": "Return to vacancies",
+  "BlogH1": "Blog",
+  "btnQuestRecom": "Record a request",
+  "cityForm": "City, district or village",
   "cleanFilter": "Clean filter",
   "companyName": "Agency of Innovation and Digital Technologies of the REPUBLIC OF TAJIKISTAN",
   "companyNameShort": "AIDT",
   "contact": "Сontacts",
-  "docs": "Docs",
+  "CoveringLetter": "Covering letter",
+  "DarkMode": "Dark Mode",
+  "dateStartDoc": "Valid from",
+  "DecreesH1": "Decrees and resolutions\nPresident of the Republic of Tajikistan",
+  "describeQuestRecom": "Write us a message and our specialists will contact you shortly.",
+  "describeRequest": "Description of the request",
+  "Documents": "Documents",
   "events": "Events",
+  "ExtraDescribe": "Use our services to find the answer to the question that interests you",
+  "ExtraQuesH1": "Do you have any additional questions?",
+  "filterVacancy": "Job filter",
+  "from": "From",
+  "haventPageDescribe": "We don't have such a page",
+  "haventPageH1": "To find the information you need, try returning to the main page",
+  "hidden": "Hidden",
+  "historyAgencyh1": "History of Agency",
+  "interviewsFilter": "Interviews",
+  "lawH1": "Laws",
   "learnMore": "Learn more",
   "main": "Main",
+  "Management": "Management",
   "more": "More",
   "moreInfo": "More information",
+  "newsFilter": "News",
+  "ourActivityH1": "Our Activity",
+  "ourContactH1": "Our contacts",
+  "ourPartners": "Our Partners",
+  "ourProjects": "Our Projects",
+  "partners": "Partners",
+  "phoneH3": "Phone",
   "PhotoVideo": "Photo and Video",
+  "positionAgencyH1": "Agency regulations",
+  "powerAgencyH1": "Agency powers",
   "PressCenter": "Press - Center",
+  "PrivacyPolicy": "Privacy Policy",
+  "privacyPolicyH1": "Privacy Policy",
   "projects": "Projects",
+  "QuesDescribe": "Here we have collected the most frequently asked questions and answers.",
+  "QuestRecom": "Do you have any additional questions?",
   "realizeProject": "Realized projects",
+  "recordReq": "Recording a request",
+  "RegulationH1": "Regulation",
+  "RegulationsH1": "Regulation",
+  "Reply": "Reply",
+  "salaryH1": "Salary",
+  "searchDocuments": "Search document",
+  "SearchForSite": "Advanced site search",
+  "searchVacancy": "Search vacancy",
+  "selectCity": "Select city",
+  "selectCountry": "Select country",
+  "selectedFile": "Selected file",
+  "SelectExperiense": "Select work experience",
+  "SelectGraphic": "Select work schedule",
+  "SelectType": "Select your industry",
+  "sendApplyBtn": "Submit an application for a vacancy",
+  "SendRequest": "Send a request",
+  "settingWeb": "Site settings",
+  "ShowAll": "Show all",
+  "SimilarQuesH1": "FAQ",
+  "SimilarVacancies": "Similar vacancies",
+  "siteH3": "Website",
+  "SizeText": "Font size",
+  "structAgency": "Agency structure",
+  "structCentr": "Structure of the agency's central apparatus",
+  "structOrganize": "List of agency system organizations",
+  "subjectRequest": "Subject of the appeal",
+  "successRequestDescribe": "Our specialists will contact you shortly for more detailed negotiations",
+  "successRequestSend": "Your application has been successfully sent",
+  "to": "To",
+  "uploadExtraFile": "Attach additional file",
+  "uploadResume": "Upload your resume",
+  "urEmail": "Your email",
+  "urFio": "Your full name",
+  "urJob": "Place of work",
+  "urPhone": "Your phone number",
   "vacancy": "Vacancy",
-  "visuallyText": "Version for visually impaired"
+  "visuallyText": "Version for visually impaired",
+  "WorkingConditions": "Working conditions"
 }
