--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,24 +1,101 @@
 {
-  "about": "О нас",
+  "Президент РТ": "Президент Республики Таджикистан",
+  "aboutUsh1": "Об агенстве",
   "activity": "Деятельность",
   "activityAIDT": "Деятельность АИЦТ",
+  "ActualVacancy": "Актуальные Вакансии",
+  "adressForm": "Улица, дом и квартира",
+  "allFilter": "Все",
   "allMedia": "Вся медиа",
   "allNews": "Все новости",
   "applyFilter": "Применить фильтр",
+  "ApplyVacancy": "Подача заявки на вакансию",
+  "articlesFilter": "Статьи",
+  "backToMain": "Вернуться на главную",
+  "backToVacancy": "Вернуться к вакансиям",
+  "BlogH1": "Блог",
+  "btnQuestRecom": "Записать обращение",
+  "cityForm": "Город, район или село",
   "cleanFilter": "Очистить фильтр",
   "companyName": "Агентства инновации и цифровых технологий РЕСПУБЛИКИ ТАДЖИКИСТАН",
   "companyNameShort": "АИЦТ",
   "contact": "Контакты",
-  "docs": "Документы",
+  "CoveringLetter": "Сопроводительное письмо",
+  "DarkMode": "Темная тема",
+  "dateStartDoc": "Действует с",
+  "DecreesH1": "Указы и постановления \nПрезидента Республики Таджикистан",
+  "describeQuestRecom": "Запишите нам обращение и  в ближайшее время наши специалисты свяжутся с вами.",
+  "describeRequest": "Описание обращения",
+  "Documents": "Документы",
   "events": "События",
+  "ExtraDescribe": "Воспользуйтесь нашими сервисами, чтобы найти ответ на вопрос который вас интересует",
+  "ExtraQuesH1": "Остались дополнительные вопросы?",
+  "filterVacancy": "Фильтр вакансий",
+  "from": "От",
+  "haventPageDescribe": "Такой страницы у нас нет",
+  "haventPageH1": "Чтобы найти нужную вам информацию попробуйте вернуться на главную страницу",
+  "hidden": "Скрыть",
+  "historyAgencyh1": "История агентства",
+  "interviewsFilter": "Интервью",
+  "lawH1": "Законы",
   "learnMore": "Перейти на сайт",
   "main": "Главная",
+  "Management": "Руководство",
   "more": "Подробнее",
   "moreInfo": "Больше информации",
+  "newsFilter": "Новости",
+  "ourActivityH1": "Наша деятельность",
+  "ourContactH1": "Наши контакты",
+  "ourPartners": "Наши Партнеры",
+  "ourProjects": "Наши проекты",
+  "partners": "Партнеры",
+  "phoneH3": "Телефон",
   "PhotoVideo": "Фото и Видео",
+  "positionAgencyH1": "Положение агенства",
+  "powerAgencyH1": "Полномочия Агенства",
   "PressCenter": "Пресс - Центр",
+  "PrivacyPolicy": "Политика Конфиденциальности",
+  "privacyPolicyH1": "Политика конфиденциальности",
   "projects": "Проекты",
+  "QuesDescribe": "Тут мы собрали самые частые вопросы и ответы",
+  "QuestRecom": "Остались дополнительные вопросы?",
   "realizeProject": "Реализованные проекты",
+  "recordReq": "Запись обращения",
+  "RegulationH1": "Нормативно правовые акты",
+  "RegulationsH1": "Нормативно правовые акты",
+  "Reply": "Откликнуться",
+  "salaryH1": "Зарплата",
+  "searchDocuments": "Поиск документа",
+  "SearchForSite": "Расширенный поиск по сайту",
+  "searchVacancy": "Поиск вакансий",
+  "selectCity": "Выберите город",
+  "selectCountry": "Выберите страну",
+  "selectedFile": "Выбранный файл",
+  "SelectExperiense": "Выберите опыт работы",
+  "SelectGraphic": "Выберите график работы",
+  "SelectType": "Выберите отрасль работы",
+  "sendApplyBtn": "Отправить заявку на вакансию",
+  "SendRequest": "Отправить обращение",
+  "settingWeb": "Настройки сайта",
+  "ShowAll": "Показать все",
+  "SimilarQuesH1": "Частые вопросы",
+  "SimilarVacancies": "Похожие вакансии",
+  "siteH3": "Сайт",
+  "SizeText": "Размер шрифта",
+  "structAgency": "Структура агентства",
+  "structCentr": "Структура центрального аппарата агентства",
+  "structOrganize": "Перечень организаций системы агентства",
+  "subjectRequest": "Тема обращения",
+  "successRequestDescribe": "В ближайшее время наши специалисты свяжутся с вами для более подробных перговоров",
+  "successRequestSend": "Ваша заявка успешно отправлена",
+  "to": "До",
+  "uploadExtraFile": "Приложить дополнительный файл",
+  "uploadResume": "Загрузите ваше резюме",
+  "urEmail": "Ваша почта",
+  "urFio": "Ваше ФИО",
+  "urJob": "Место работы",
+  "urPhone": "Ваш номер телефона",
   "vacancy": "Вакансии",
-  "visuallyText": "Версия для слабовидящих"
+  "visuallyText": "Версия для слабовидящих",
+  "WorkingConditions": "Условия работы"
 }
