--- a/public/locales/tj/translation.json
+++ b/public/locales/tj/translation.json
@@ -1,23 +1,101 @@
 {
-  "about": "Дар бораи мо",
+  "Президент РТ": "Президенти Ҷумҳурии Тоҷикистон",
+  "aboutUsh1": "Дар бораи мо",
   "activity": "Фаъолият",
   "activityAIDT": "Фаъолияти АИТР",
+  "ActualVacancy": "Ҷойҳои холии ҷорӣ",
+  "adressForm": "Куча, хона ва квартира",
+  "allFilter": "Ҳама",
   "allMedia": "Хама медиа",
   "allNews": "Ҳама хабарҳо",
   "applyFilter": "Филтрро татбиқ кунед",
+  "ApplyVacancy": "Мурочиат кардан ба кор",
+  "articlesFilter": "Мақолаҳо",
+  "backToMain": "Бозгашт ба саҳифаи асосӣ",
+  "backToVacancy": "Бозгашт ба ҷойҳои холӣ",
+  "BlogH1": "Блог",
+  "btnQuestRecom": "Дархостро сабт кадан",
+  "cityForm": "Шахр, район ё кишлок",
   "cleanFilter": "Филтрро тоза кардан",
   "companyName": "Агентии инноватсия ва технологияҳои рақамии ҶУМҲУРИИ ТОҶИКИСТОН",
   "companyNameShort": "AИТР",
-  "docs": "Ҳуҷҷатҳо",
+  "contact": "Контактхо",
+  "CoveringLetter": "Номаи муқаддима",
+  "DarkMode": "Ҳолати торик",
+  "dateStartDoc": "Эътибор аз",
+  "DecreesH1": "Фармонхо ва карорхо\nПрезиденти Ҷумҳурии Тоҷикистон",
+  "describeQuestRecom": "Ба мо паём нависед ва мутахассисони мо ба зудӣ бо шумо тамос хоҳанд гирифт.",
+  "describeRequest": "Тавсифи дархост",
+  "Documents": "Ҳуҷҷатҳо",
   "events": "Ҳодисаҳо",
+  "ExtraDescribe": "Аз хидматҳои мо истифода баред, то ба саволе, ки шуморо ба худ ҷалб мекунад, ҷавоб ёбед",
+  "ExtraQuesH1": "\nОё шумо ягон саволи иловагӣ доред?",
+  "filterVacancy": "Филтри кор",
+  "from": "Аз",
+  "haventPageDescribe": "Мо чунин саҳифа надорем",
+  "haventPageH1": "Барои дарёфти маълумоти лозима, кӯшиш кунед, ки ба саҳифаи асосӣ баргардед",
+  "hidden": "Пинҳон кардан",
+  "historyAgencyh1": "Таърихи Агентӣ",
+  "interviewsFilter": "Мусоҳибаҳо",
+  "lawH1": "Қонунҳо",
   "learnMore": "Ба вебсайт рафтан",
   "main": "Асосӣ",
+  "Management": "Маъмурият",
   "more": "Тафсилоти бештар",
   "moreInfo": "Маълумоти бештар",
+  "newsFilter": "Ахбор",
+  "ourActivityH1": "Фаъолияти мо",
+  "ourContactH1": "Алокахои мо",
+  "ourPartners": "Шарикони мо",
+  "ourProjects": "Лоиҳаҳои мо",
+  "partners": "Шарикон",
+  "phoneH3": "Телефон",
   "PhotoVideo": "Фото ва Видео",
+  "positionAgencyH1": "Мавқеи агентӣ",
+  "powerAgencyH1": "Ваколатҳои агентӣ",
   "PressCenter": "Маркази - Матбуот",
+  "PrivacyPolicy": "Сиёсати Корбурди Маълумоти Шахсӣ",
+  "privacyPolicyH1": "Сиёсати Корбурди Маълумоти Шахсӣ",
   "projects": "Лоиҳаҳо",
+  "QuesDescribe": "Дар ин ҷо мо саволҳо ва ҷавобҳои бештар додашударо ҷамъ овардем.",
+  "QuestRecom": "Оё шумо ягон саволи иловагӣ доред?",
   "realizeProject": "Лоиҳаҳои амалӣ",
-  "vacancy": "Ҷойи кори",
-  "visuallyText": "Версия барои маъюбон"
+  "recordReq": "Сабти дархост",
+  "RegulationH1": "Низомнома",
+  "RegulationsH1": "Низомнома",
+  "Reply": "Ҷавоб диҳед",
+  "salaryH1": "Музди мехнат",
+  "searchDocuments": "Ҷустуҷӯи ҳуҷҷат",
+  "SearchForSite": "Ҷустуҷӯи пешрафтаи сайт",
+  "searchVacancy": "Ҷустуҷӯи ҷойҳои холӣ",
+  "selectCity": "Шаҳрро интихоб кунед",
+  "selectCountry": "Кишварро интихоб кунед",
+  "selectedFile": "Файли интихобшуда",
+  "SelectExperiense": "Таҷрибаи кориро интихоб кунед",
+  "SelectGraphic": "Нақшаи корро интихоб кунед",
+  "SelectType": "Саноати худро интихоб кунед",
+  "sendApplyBtn": "Ариза фиристонидан ба чои кор",
+  "SendRequest": "Ариза фиристондан",
+  "settingWeb": "Танзимоти сайт",
+  "ShowAll": "Ҳама нишон диҳед",
+  "SimilarQuesH1": "Саволҳои зиёд такрормешуда",
+  "SimilarVacancies": "Чунин ҷойҳои холӣ",
+  "siteH3": "Вебсайт",
+  "SizeText": "Андозаи шрифт",
+  "structAgency": "Сохтори агентӣ",
+  "structCentr": "Сохтори дастгоҳи марказии агентӣ",
+  "structOrganize": "Рӯйхати ташкилотҳои системаи агентӣ",
+  "subjectRequest": "Мавзӯи шикоят",
+  "successRequestDescribe": "Мутахассисони мо ба зудӣ бо шумо тамос хоҳанд гирифт, то музокироти муфассалро анҷом диҳед",
+  "successRequestSend": "Аризаи шумо бомуваффақият фиристода шуд",
+  "to": "То",
+  "uploadExtraFile": "Файли иловагӣ замима кунед",
+  "uploadResume": "Резюмеи худро бор кунед",
+  "urEmail": "Почтаи шумо",
+  "urFio": "Номи пурраи шумо",
+  "urJob": "Ҷои кор",
+  "urPhone": "Рақами телефони шумо",
+  "vacancy": "Кори холӣ",
+  "visuallyText": "Версия барои маъюбон",
+  "WorkingConditions": "Шароити кор"
 }
