--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "Президент РТ": "President of the Republic of Tajikistan",
+  "Gallery": "Gallery",
   "aboutUsh1": "About us",
   "activity": "Activity",
   "activityAIDT": "Activity AIDT",
@@ -19,6 +20,9 @@
   "cleanFilter": "Clean filter",
   "companyName": "Agency of Innovation and Digital Technologies of the REPUBLIC OF TAJIKISTAN",
   "companyNameShort": "AIDT",
+  "officialSite": "Official site",
+  "aboutPresident": "Founder of peace and national unity - Leader of the nation, President of the Republic of Tajikistan, dear Emomali Rahmon",
+  "aboutPresidentDescribe": "To go to the official website of the President of the Republic of Tajikistan, click on the button “Go to site”",
   "contact": "Сontacts",
   "CoveringLetter": "Covering letter",
   "DarkMode": "Dark Mode",
