--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,10 +1,14 @@
 {
   "Президент РТ": "Президент Республики Таджикистан",
+  "Gallery": "Галерея",
   "aboutUsh1": "Об агенстве",
   "activity": "Деятельность",
   "activityAIDT": "Деятельность АИЦТ",
   "ActualVacancy": "Актуальные Вакансии",
   "adressForm": "Улица, дом и квартира",
+  "aboutPresident": "Основатель мира и национального единства - Лидер нации, Президент Республики Таджикистан уважаемый Эмомали Рахмон",
+  "aboutPresidentDescribe": "Для перехода на официальный сайт президента Республики Таджикистан нажмите на кнопку “Перейти на сайт”",
+  "officialSite": "Официальный сайт",
   "allFilter": "Все",
   "allMedia": "Вся медиа",
   "allNews": "Все новости",
