--- a/public/locales/tj/translation.json
+++ b/public/locales/tj/translation.json
@@ -1,9 +1,13 @@
 {
   "Президент РТ": "Президенти Ҷумҳурии Тоҷикистон",
   "aboutUsh1": "Дар бораи мо",
+  "Gallery": "Галерея",
   "activity": "Фаъолият",
   "activityAIDT": "Фаъолияти АИТР",
   "ActualVacancy": "Ҷойҳои холии ҷорӣ",
+  "officialSite": "Сомонаи расмӣ",
+  "aboutPresident": "Асосгузори сулҳу ваҳдати миллӣ-Пешвои миллат, Президенти Ҷумҳурии Тоҷикистон, муҳтарам Эмомалӣ Раҳмон",
+  "aboutPresidentDescribe": "Барои ворид шудан ба сомонаи расмии Президенти Ҷумҳурии Тоҷикистон, тугмаро пахш кунед `Ба сайт равед`",
   "adressForm": "Куча, хона ва квартира",
   "allFilter": "Ҳама",
   "allMedia": "Хама медиа",
